# lang-learning

./: pyproject.toml
learning-langchain-book/: Makefile
learning-langchain-book/ch1_llm/: llm.py
learning-langchain-book/ch2_rag/: README.md  rag.py  text_splitting.py
learning-langchain-book/ch3/: README.md  rag_fusion.py
learning-langchain-book/ch3_rag_retrieve/: prompt.py  retrieve_doc.py  rrr.py
learning-langchain-book/ch4_langgraph/: state_graph.py
learning-langchain-book/ch6_agent/: ddg_run.py  langgraph_agent.py
sample/: meta.txt  test.json  text.txt  text2.txt
