[project]
name = "lang-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "langchain>=0.3.27",
    "langchain-community>=0.3.31",
    "langchain-ollama>=0.3.10",
    "langchain-postgres>=0.0.16",
    "langgraph>=1.0.0",
    "psycopg2-binary>=2.9.11",
    "pymupdf>=1.26.5",
]
